--- a/ideainfo_test/src/main/webapp/css/user/eastar.css
+++ b/ideainfo_test/src/main/webapp/css/user/eastar.css
@@ -8,7 +8,7 @@
 	display:block; 
 	overflow:hidden; 
 	height:75px; }
-.content .titBox2 h1{ background: url(../images/tit_c_doc.png) top left no-repeat;}
+.content .titBox2 h1{ background: url(../../../images/user/tit_c_doc.png) top left no-repeat;}
 .content .titBox2 h2{position:absolute;
 	top:38px;
 	right:0;
@@ -301,7 +301,7 @@ select.select_style2 { height: 32px;
 	font-size:14px; 
 	font-weight:700; 
 	padding:14px 5px 10px 40px !important; 
-	background: url(../images/board_page_img.gif) no-repeat 20px 15px; }
+	background: url(../../../images/user/board_page_img.gif) no-repeat 20px 15px; }
 .board_page span.p01 {color:#b0282a}
 .auth_comm_area {float: left; 
 	padding:2px 0 0 0px; }
@@ -451,7 +451,7 @@ select.select_style2 { height: 32px;
 	display:block; 
 	width:16px; 
 	height:16px; 
-	background: url(../images/check_all.png) no-repeat left top; 
+	background: url(../../../images/user/check_all.png) no-repeat left top; 
 	background-size:16px;
 	margin-top:2px;
 	z-index:3;}
@@ -489,7 +489,7 @@ select.select_style2 { height: 32px;
 	height:16px; 
 	background-size:16px !important;
 	margin-top:2px;
-	background: url(../images/radio_all.png) no-repeat left top; 
+	background: url(../../../images/user/radio_all.png) no-repeat left top; 
 	z-index:3;}
 .mini_radio label, .mini_r_table label  {float:left; 
 	margin-left:4px; 
@@ -661,7 +661,7 @@ table td .answer { background-color:#b0282a !important;
 	display:block; 
 	width:14px; 
 	height:14px; 
-	background: url(../images/check_all.png) no-repeat left top; 
+	background: url(../../../images/user/check_all.png) no-repeat left top; 
 	background-size:14px;
 	margin-top:3px;
 	z-index:3;}
@@ -697,7 +697,7 @@ table td .answer { background-color:#b0282a !important;
 	height:14px; 
 	background-size:14px !important;
 	margin-top:3px;
-	background: url(../images/radio_all.png) no-repeat left top; 
+	background: url(../../../images/user/radio_all.png) no-repeat left top; 
 	z-index:3;}
 .reserve_date .mini_radio label, .mini_r_table label  {float:left; 
 	margin-left:4px; 
@@ -799,7 +799,7 @@ table td .answer { background-color:#b0282a !important;
 	position:relative;
 	font-weight:500;
 	font-size:16px;
-	background-image:url(../images/open.png);
+	background-image:url(../../../images/user/open.png);
 	background-repeat:no-repeat;
 	background-size:20px;}
 .fold_wrap .fold_tit strong{float:right;
@@ -833,7 +833,7 @@ table td .answer { background-color:#b0282a !important;
 .fileAdd .txt{font-weight:bold;
 	color:#767676;
 	font-size:13px;}
-.fileAdd .file, .fileAdd .link{background:url(../images/icon_bar1x12.gif)no-repeat left 4px;
+.fileAdd .file, .fileAdd .link{background:url(../../../images/user/icon_bar1x12.gif)no-repeat left 4px;
 	padding-left:11px;
 	margin-left:6px;}
 .box_Txt{display:inline-block;
@@ -860,7 +860,7 @@ table td .answer { background-color:#b0282a !important;
 	width:18px;
 	height:18px;
 	margin-left:1px;
-	background:url(../images/btn_down.png)no-repeat;}
+	background:url(../../../images/user/btn_down.png)no-repeat;}
 	
 	
 	
