--- a/ideainfo_test/src/main/webapp/css/user/email_css.css
+++ b/ideainfo_test/src/main/webapp/css/user/email_css.css
@@ -19,7 +19,7 @@ address,caption,cite,code,dfn,em,var{font-style:normal;font-weight:normal}
 
 .hideTxt { overflow: hidden; color: transparent; text-indent: 100%; white-space: nowrap; }
 .email_head { position:relative;width:100%;height:70px;background:#d00b40;}
-.email_head h1 span{ display: block; position: absolute; top: 15px; left:25px; width:300px; height: 35px; background: url(../images/eastarjet_logo_email.png) no-repeat 0 0;  }
+.email_head h1 span{ display: block; position: absolute; top: 15px; left:25px; width:300px; height: 35px; background: url(../../../images/user/eastarjet_logo_email.png) no-repeat 0 0;  }
 
 .email_wrap .em_content { margin:20px; padding:20px 25px; border:1px solid #e0e0e0;   height: auto;  box-sizing: border-box; background-color: #fff; }
 .comment_mdr { display:block; overflow:hidden; padding:25px 0; border-top:1px solid #CCC; border-bottom:1px solid #CCC }
