--- a/ideainfo_test/src/main/webapp/css/user/main_css.css
+++ b/ideainfo_test/src/main/webapp/css/user/main_css.css
@@ -57,28 +57,28 @@
 .cont_box_main_02 .auth_application .auth_info ul { height:100%;}
 .cont_box_main_02 .auth_application .auth_info ul::after {content:""; display:block; clear:both;}
 .cont_box_main_02 .auth_application .auth_info ul li { height:100%; display:block; margin:0 auto; float:left; height:100%; width:33.33%; box-sizing: border-box;text-align:center;}
-.cont_box_main_02 .auth_application .auth_info ul li a { display:block; background: url(../images/24.png)no-repeat 0 0; background-size:66%; background-position:top; padding-top:64px; margin-top:6px;}
+.cont_box_main_02 .auth_application .auth_info ul li a { display:block; background: url(../../../images/user/24.png)no-repeat 0 0; background-size:66%; background-position:top; padding-top:64px; margin-top:6px;}
 .news_board { background-color:#d12149; color:#FFF;  font-size:11px !important; font-weight:bold; padding: 1px 5px 0; float:left; margin-right:5px;}
 
 /* background img */
-.cont_box_main_02 .auth_application .iv_auth_info ul li:nth-of-type(1) a { background: url(../images/iv_domestic.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
-.cont_box_main_02 .auth_application .iv_auth_info ul li:nth-of-type(2) a {background: url(../images/iv_international.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
-.cont_box_main_02 .auth_application .iv_auth_info ul li:nth-of-type(3) a {background: url(../images/iv_status.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:64px; margin-top:6px;}
+.cont_box_main_02 .auth_application .iv_auth_info ul li:nth-of-type(1) a { background: url(../../../images/user/iv_domestic.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
+.cont_box_main_02 .auth_application .iv_auth_info ul li:nth-of-type(2) a {background: url(../../../images/user/iv_international.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
+.cont_box_main_02 .auth_application .iv_auth_info ul li:nth-of-type(3) a {background: url(../../../images/user/iv_status.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:64px; margin-top:6px;}
 
-.cont_box_main_02 .auth_application .pf_auth_info ul li:nth-of-type(1) a { background: url(../images/pf_enrollment.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
-.cont_box_main_02 .auth_application .pf_auth_info ul li:nth-of-type(2) a {background: url(../images/pf_status.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
-.cont_box_main_02 .auth_application .pf_auth_info ul li:nth-of-type(3) a {background: url(../images/pf_ok.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
+.cont_box_main_02 .auth_application .pf_auth_info ul li:nth-of-type(1) a { background: url(../../../images/user/pf_enrollment.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
+.cont_box_main_02 .auth_application .pf_auth_info ul li:nth-of-type(2) a {background: url(../../../images/user/pf_status.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
+.cont_box_main_02 .auth_application .pf_auth_info ul li:nth-of-type(3) a {background: url(../../../images/user/pf_ok.png)no-repeat 0 0; background-size:66%; background-position:top;padding-top:66px; margin-top:6px;}
 .cont_box_main_02 .auth_application .iv_auth_info ul li:hover, .cont_box_main_02 .auth_application .pf_auth_info ul li:hover { font-weight:bold; background-color:#f8f8f8}
 
 /* 입주시스템 관리자 접수 정보*/
 #container .snb .auth_info_area {  padding: 5px 8px; }
 #container .snb .auth_info_area a{ display:block;  margin:0px 0; position:relative; }
-.inf_tit1 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../images/info1_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
-.inf_tit2 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../images/info2_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
-.inf_tit3 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../images/info3_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
-.inf_tit4 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../images/info4_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
-.inf_tit5 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../images/info5_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
-.inf_tit6 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../images/info6_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
+.inf_tit1 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../../../images/user/info1_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
+.inf_tit2 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../../../images/user/info2_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
+.inf_tit3 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../../../images/user/info3_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
+.inf_tit4 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../../../images/user/info4_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
+.inf_tit5 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../../../images/user/info5_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
+.inf_tit6 { padding: 10px 0 9px 40px;border-style: solid; border-width: 1px; border-color: #fff #c8c8c8 #c8c8c8 #ebebeb; background-color: #FFF; background: #fcfcfc url(../../../images/user/info6_icon.png) no-repeat 16px 10px; line-height:16px; color:#333; font-weight:bold; -webkit-box-sizing: border-box;}
 
 .inf_tit1 span, .inf_tit2 span, .inf_tit3 span, .inf_tit4 span, .inf_tit5 span, .inf_tit6 span, .inf_tit7 span, .inf_tit8 span { font-size:11px; position: absolute; top:6px; right:5px; border:1px solid #bdc5d6; background-color:#e9ecf3; width:20px; text-align:center; padding:3px 5px 2px; color:#d12149 }
 .auth_info_area h2 { font-size:12px; padding:10px;border-style: solid; border-width: 1px; border-color: #ebebeb #c8c8c8 #c8c8c8 #ebebeb; background-color: #a91e3e; color:#fff}
